--- a/templates/room.html
+++ b/templates/room.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Message</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
+
 <body>
-    Hello
+    <div>
+        <div class="flex justify-center items-center h-[100vh]">
+            <div class="flex flex-col justify-center items-center border px-15 py-10">
+                <div class="text-2xl font-larger">
+                    Room Name
+                </div>
+                <form action="" method="POST">
+    {% csrf_token %}
+    <div class="flex flex-col items-center">
+        <div class="relative top-2 w-full">
+            <label for="username">Username:</label>
+            <input name="username" type="text" class="w-full border border-black p-1" placeholder="Enter your username">
+        </div>
+        <div class="relative top-4 w-full">
+            <label for="room_id">Room ID:</label>
+            <input name="room_id" type="text" class="w-full border border-black p-1" placeholder="Enter room id">
+        </div>
+        <div class="relative top-8">
+            <button type="submit" class="px-3 py-1 bg-orange-400 rounded-md">
+                Submit
+            </button>
+        </div>
+    </div>
+</form>
+
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
